[tool.poetry]
name = "unuseless-master"
version = "0.1.0"
description = ""
authors = ["Artprozew <artprozew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
pytz = "^2024.1"
psutil = "^5.9.8"
unidecode = "^1.3.8"
humanize = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
